Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Orangefractal.GitHub.io by OrangeFractal</title>
+    <title>OrangeFractal by OrangeFractal</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Orangefractal.GitHub.io</h1>
-        <h2></h2>
+        <h1>OrangeFractal</h1>
+        <h2>&lt;3</h2>
 
         <section id="downloads">
           <a href="https://github.com/OrangeFractal" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
