Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,32 +1,58 @@
-
-<!DOCTYPE html>
-<html lang="en-us">
+<!doctype html>
+<html>
   <head>
-    <meta charset="UTF-8">
-    <title>cydro&#39;s old repo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>OrangeFractal by OrangeFractal</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   <body>
-    <section class="page-header">
-      <h1 class="project-name">cydro&#39;s old repo</h1>
-      <h2 class="project-tagline">add my new repo address (found below)</h2>
-    </section>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/OrangeFractal">View On GitHub</a></li>
+        </nav>
+      </div><!-- end header -->
 
-    <section class="main-content">
-      <p>This repo has moved to <a href="http://repo.cydro.us">repo.cydro.us</a>! Please add this new repo to your sources. Thank you!</p>
+    <div class="wrapper">
 
-      <footer class="site-footer">
+      <section>
+        <div id="title">
+          <h1>OrangeFractal</h1>
+          <p>&lt;3</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/OrangeFractal">OrangeFractal</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-        <span class="site-footer-credits">Project maintained by <a href="https://github.com/cydro">cydro</a>. 
-		<br><a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a> by <a href="https://twitter.com/jasonlong">Jason Long</a>.</br></span>
-      </footer>
+        <h3>
+<a id="welcome-orangefractals-repo-" class="anchor" href="#welcome-orangefractals-repo-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome OrangeFractal's repo :)</h3>
 
-    </section>
+<p>Add <strong>repo.orangefractal.net</strong> to your Cydia sources to install my packages!</p>
+      </section>
 
-  
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-64778303-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
