Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>OrangeFractal by OrangeFractal</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  </head>
 
- 
+  <body>
 
+    <header>
+      <div class="container">
+        <h1>OrangeFractal</h1>
+        <h2>&lt;3</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/OrangeFractal" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
         <h3>
-<a id="welcome-orangefractals-repo-" class="anchor" href="#welcome-orangefractals-repo-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome OrangeFractal's repo :)</h3>
+<a id="welcome-to-orangefractals-repo-" class="anchor" href="#welcome-to-orangefractals-repo-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to OrangeFractal's repo :)</h3>
 
 <p>Add <strong>repo.orangefractal.net</strong> to your Cydia sources to install my packages!</p>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
