--- a/404.html
+++ b/404.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>GET OUT!!!</title>
+</head>
+<body>
 
-NOTHING TO SEE HERE
-move along
+<h1>HOW DID YOU GET HERE?!?</h1>
+<p>move along, nothing to see...</p>
+
+</body>
+</html>
