--- a/404.html
+++ b/404.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+   <!-- This file lives in public/404.html -->
+   <div class="dialog">
+     <h1>The page you were looking for doesn't exist.</h1>
+-    <p>You may have mistyped the address or the page may have moved.</p>
++    <p>You may have mistyped the address or the page may have moved.  Please fix it.</p>
+   </div>
+ </body>
+ </html>
