--- a/404.html
+++ b/404.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 <h1>404 document not found. :^(</h1>
+
+</body>
+</html>
+
+
+
+
