--- a/404.html
+++ b/404.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>How Did You Get Here?</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<h1>404 document not found. :^(</h1>
+<h1>4, Oh, 4</h1>
 
 </body>
 </html>
