--- a/404.html
+++ b/404.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>How Did You Get Here?</title>
+<title>You found me!</title>
 </head>
 <body>
 
 <h1>4, Oh, 4</h1>
-
+<p>I am the great 404!
+I'm so happy we finally get to meet in person,
+it get's ever so lonely down here. :(</p>
 </body>
 </html>
 
