--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>4, Oh, 4</h1>
+<center><h1>4, Oh, 4</h1></center>
 <p>I am the great 404!
 I'm so happy we finally get to meet in person,
 it get's ever so lonely down here. :(</p>
