--- a/404.html
+++ b/404.html
@@ -6,9 +6,10 @@
 <body>
 
 <center><h1>4, Oh, 4</h1></center>
-<p>I am the great 404!
+
+<center><p>It is I, the great 404!
 I'm so happy we finally get to meet in person,
-it get's ever so lonely down here. :(</p>
+it get's ever so lonely down here. :( </p></center>
 </body>
 </html>
 
