--- a/404.html
+++ b/404.html
@@ -5,11 +5,16 @@
 </head>
 <body>
 
-<center><h1>4, Oh, 4</h1></center>
+<center>
+  <h1>
+    4, Oh, 4
+  </h1>
+</center>
 
-<center><p>It is I, the great 404!
-I'm so happy we finally get to meet in person,
-it get's ever so lonely down here. :( </p></center>
+<center>
+  <p>It is I, the great 404!<br>I'm so happy we finally get to meet in person.<br>It get's ever so lonely down here.<br>:(
+  </p>
+</center>
 </body>
 </html>
 
