--- a/404.html
+++ b/404.html
@@ -12,8 +12,8 @@
 </center>
 
 <center>
-  <p>It is I, the great 404!<br>I'm so happy we finally get to meet in person.<br>It get's ever so lonely down here.<br>:(
-  </p>
+  <h2>It is I, the great 404!<br>I'm so happy we finally get to meet in person.<br>It get's ever so lonely down here.<br>:(
+  </h2>
 </center>
 </body>
 </html>
