--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 </center>
 
 <center>
-  <h2>It is I, the great 404!<br>I'm so happy we finally get to meet in person.<br>It get's ever so lonely down here.<br>:(
+  <h2>It is I, the great 404!<br>I'm so happy we finally get to meet in person.<br>It get's ever so lonely down here.<br><br>:(
   </h2>
 </center>
 </body>
