--- a/404.html
+++ b/404.html
@@ -7,12 +7,12 @@
 
 <center>
   <h1>
-    4, Oh, 4
+    4, Oh, 4<br>
   </h1>
 </center>
 
 <center>
-  <h2>It is I, <b>The Great 404!</b><br>I'm so happy we finally get to meet in person.<br>It get's ever so lonely down here.<br><br>:(
+  <h2>It is I,<br>The Great 404!<br>I'm so happy we finally get to meet in person.<br>It get's ever so lonely down here.<br><br>:(
   </h2>
 </center>
 </body>
