--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 </center>
 
 <center>
-  <h2><br>It is I,<br>The Great 404!<br>I'm so happy we finally get to meet in person.<br>It get's ever so lonely down here.<br><br>:(
+  <h2><br>It is I,<br>The Great 404!<br>I'm so happy we finally get to meet in person.<br><br>It gets ever so lonely down here.<br><br>:(
   </h2>
 </center>
 </body>
