--- a/404.html
+++ b/404.html
@@ -14,6 +14,9 @@
 <center>
   <h2><br>It is I,<br>The Great 404!<br>I'm so happy we finally get to meet in person.<br><br>It gets ever so lonely in here.<br><br>:(
   </h2>
+
+<img src="http://media.giphy.com/media/Qld1cd6a6QlWw/giphy.gif" alt="Deer" style="width:200px;height:200px;">
+
 </center>
 </body>
 </html>
