--- a/404.html
+++ b/404.html
@@ -12,10 +12,9 @@
 </center>
 
 <center>
-  <h2><br>It is I,<br>The Great 404!<br>I'm so happy we finally get to meet in person.<br><br>It gets ever so lonely in here.<br><br>:(
-  </h2>
+  <h2>Stop it Gunter!<br></h2>
 
-<img src="http://media.giphy.com/media/Qld1cd6a6QlWw/giphy.gif" alt="Deer" style="width:200px;height:200px;">
+<img src="http://data1.whicdn.com/images/49614056/large.gif" alt="Gunter" style="width:500px;height:281px;">
 
 </center>
 </body>
