--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 </center>
 
 <center>
-  <h2>Stop it Gunter!<br></h2>
+  <h2>Gunter! Stop it!<br></h2>
 
 <img src="http://data1.whicdn.com/images/49614056/large.gif" alt="Gunter" style="width:500px;height:281px;">
 
