--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:#B0B0B0">
+<body style="background-color:#DADADA">
 <head>
 <title>You found me!</title>
 </head>
