--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 </center>
 
 <center>
-  <h2><br><br>Gunter! Stop it!<br></h2>
+  <h2><br><br>Gunter! Stop that!<br></h2>
 
 <img src="http://data1.whicdn.com/images/49614056/large.gif" alt="Gunter" style="width:500px;height:281px;">
 
